Update README.md from Eraser